welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:1: error: Missing closing brace `}' assumed here
override def run() {
^SnakeBuggle:1: error: expected start of definition
override def run() {
         ^SnakeBuggle:9: error: expected class or object definition
def serpent(){
^SnakeBuggle:27: error: expected class or object definition
def pos(): Boolean ={ 
^SnakeBuggle:38: error: Missing closing brace `}' assumed here
    }
    ^